fixed elementslist component issue on smaller laptops

--- a/src/components/ui/elements_list/elementslist.css
+++ b/src/components/ui/elements_list/elementslist.css
@@ -84,7 +84,7 @@
 
 .elements_list_inner {
   display: flex;
-  justify-content: center;
+  align-items: center;
   flex-direction: column;
   width: 100%;
   padding-top: 30px;
