--- a/src/components/ui/preview/preview.css
+++ b/src/components/ui/preview/preview.css
@@ -8,10 +8,11 @@
   background-color: rgb(255, 255, 255);
   /* box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.486); */
 }
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1417px) {
   .preview_window_big {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
   }
 }
 .big_iframe {
